--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,18 @@
+<div>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <a class="navbar-brand">{{pageTitle}}</a>
+      <ul class="nav navbar-nav">
+        <li><a [routerLink]="['/login']">Login</a></li>
+        <li><a [routerLink]="['/items']">Item List</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class='container'>
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
 <h1>
   {{title}}
 </h1>
