--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
-
 <div>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <a class="navbar-brand">{{pageTitle}}</a>
       <ul class="nav navbar-nav">
-        <li><a [routerLink]="['/login']">Login</a></li>
-        <li><a [routerLink]="['/items']">Item List</a></li>
+        <li><a [routerLink]="['']">Link 1</a></li>
+        <li><a [routerLink]="['']">Link 2</a></li>
       </ul>
     </div>
   </nav>
+
   <div class='container'>
     <ul>
       <li class="text" *ngFor="let item of items | async">
