--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,7 +1,7 @@
-<navi-bar></navi-bar>
+
 
 <div class="row">
-  <img  class="float-center" src="../shared/images/error.jpg">
-  <div><h1>No Page Exists with that name. Please Try again!</h1></div>
+  <img  class="float-center" src="../../assets/images/404error.gif">
+  <div><h1>404 page dont exist</h1></div>
 </div>
 
