--- a/src/app/home/login.component.html
+++ b/src/app/home/login.component.html
@@ -5,7 +5,7 @@
 
     <div class="panel-body"  >
 
-
+      <div class="form-container">
         <div class="row" >
           <img src="../../assets/images/borrowing_logo.png"
                class="img-responsive center-block"
@@ -16,6 +16,6 @@
             <button (click)="login()" id="fb">Login with Facebook</button>
 
 
-
+</div>
     </div>
 </div>
