--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,48 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background:#E2E4E6;
+  padding-top:4em;
+}
+
+button {
+  padding:1.2em;
+  width:30%;
+  cursor:pointer;
+  margin-bottom:10px;
+  font-size:1.0em;
+  margin-left:35%;
+}
+
+h2 {
+  margin: 1.7em 0 .9em 0;
+}
+
+.alc {
+  text-align:center;
+  display:block;
+  margin: 15px 0;
+}
+
+.error {
+  background:#f1f0ef;
+  padding:1em;
+  width:100%;
+  display:block;
+  margin-bottom:20px;
+}
+
+
+@media (max-width: 600px) {
+  body {
+    padding-top:1.2em;
+  }
+
+  .form-container {
+    padding:1.2em;
+    width:90%;
+    margin-left:-45%;
+  }
+  button {
+    font-size:1em;
+  }
+}
