--- a/src/app/home/login.component.html
+++ b/src/app/home/login.component.html
@@ -1,21 +1,14 @@
-﻿<div class="panel panel-primary">
-    <div class="panel-heading">
-        {{pageTitle}}
-    </div>
-
-    <div class="panel-body"  >
-
-      <div class="form-container">
-        <div class="row" >
-          <img src="../../assets/images/borrowing_logo.png"
-               class="img-responsive center-block"
-               style="max-height:300px;padding-bottom:50px"/>
-        </div>
-                <span class="error" *ngIf="error">{{ error }}</span>
-
-            <button (click)="login()" id="fb">Login with Facebook</button>
+﻿<div class="jumbotron text-center">
+  <div class="container">
 
 
-</div>
-    </div>
+    <img src="../../assets/images/borrowing_logo.png"
+         class="img-responsive center-block"
+         style="max-height:300px;padding-bottom:50px"/>
+
+    <span class="error" *ngIf="error">{{ error }}</span>
+
+    <a (click)="login()"><img src="../../assets/images/fb_button.png" class="img-responsive center-block"></a>
+
+  </div>
 </div>
