--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -2,22 +2,27 @@
   <div class='panel-heading'>
     <img src="../../assets/images/logo_bannerjpg_small.jpg"/>
 
+<!--
+    <ul class="nav navbar-nav navbar-right">
+      <a class="item">
+        <img class="ui avatar img-responsive" [src]="userImage">
+      </a>
+      <li><a>{{theUser}} Logged in</a></li>
+    </ul>
+-->
 
     <ul class="nav navbar-nav navbar-right">
-    <div *ngIf = "theUser">
-      <a class="item">
-        <img class="avatar img-responsive" [src]="userImage">
-      </a>
-        <li><a>{{theUser}} Logged in</a></li>
-    </div>
+        <img [src]="userImage" class="profile-image img-circle" style="max-height:10%;max-width:20%"/>
+      <li><a>{{theUser}} Logged in</a></li>
     </ul>
+
 
   </div>
   <div class='panel-body'>
     <div class="row">
       <div class='col-md-2'>Search :</div>
       <div class='col-md-4'>
-        <input type='text' [(ngModel)] ='listFilter'/>  <!-- bind listFilter -->
+        <input type='text' [(ngModel)]='listFilter'/>  <!-- bind listFilter -->
       </div>
     </div>
     <div class='row'>
@@ -44,7 +49,22 @@
                    [style.margin.px]='imageMargin'> <a [routerLink]="['/item',item.itemId]">{{ item.name }}</a></td>
           <td>{{ item.borrowerName}}</td>
           <td>{{ item.dueDate }}</td>
-          <td>{{ item.status }}</td>
+
+          <td>
+            <span *ngIf="item.status=='Out' ">
+              <img src="../../assets/images/out-icon.png"
+                   style="max-height:50%;max-width:50%"/>
+          </span>
+            <span *ngIf="item.status=='Available' ">
+              <img src="../../assets/images/available-icon.png"
+                   style="max-height:50%;max-width:50%"/>
+          </span>
+            <span *ngIf="item.status=='Notify' ">
+              <img src="../../assets/images/notify-icon.png"
+                   style="max-height:50%;max-width:50%"/>
+          </span>
+            {{item.status}}
+          </td>
         </tr>
         </tbody>
       </table>
