--- a/src/app/items/item-detail.component.html
+++ b/src/app/items/item-detail.component.html
@@ -1,28 +1,34 @@
 <div class='panel panel-primary' *ngIf='item'>
     <div class='panel-heading' style='font-size:large'>
-        {{pageTitle + ': ' + item.itemName}}
-        <h3>Tittle goes here!</h3>
+        {{pageTitle + ': ' + item.name}}
     </div>
 
     <div class='panel-body'>
         <div class='row'>
             <div class='col-md-6'>
-                <div class='row'>
-                    <div class='col-md-3'>Name:</div>
-                    <div class='col-md-6'>{{item.itemName}}</div>
-                </div>
 
-                <!--
-                <div class='row'>
-                    <div class='col-md-3'>Description:</div>
-                    <div class='col-md-6'>{{item.description}}</div>
-                </div>
+              <div class='row'>
+                <div class='col-md-3'>Borrower:</div>
+                <div class='col-md-6'>{{item.borrowerName}}</div>
+              </div>
 
                 <div class='row'>
-                    <div class='col-md-3'>Availability:</div>
-                    <div class='col-md-6'>{{item.releaseDate}}</div>
+                    <div class='col-md-3'>Due Date:</div>
+                    <div class='col-md-6'>{{item.dueDate}}</div>
                 </div>
-                -->
+
+              <div class='row'>
+                <div class='col-md-3'>Status:</div>
+                <div class='col-md-6'>{{item.status}}</div>
+              </div>
+
+              <div class='row'>
+                <div class='col-md-3'>Notice:</div>
+                <div class='col-md-6'>{{item.description}}</div>
+              </div>
+
+              <a class="btn btn-default" href="#">Edit</a>
+              <a class="btn btn-danger" href="#">Delete</a>
             </div>
 
             <div class='col-md-6'>
@@ -30,7 +36,7 @@
                      [style.width.px]='200'
                      [style.margin.px]='2'
                      [src]='item.imageUrl'
-                     [title]='item.itemName'>
+                     [title]='item.name'>
             </div>
         </div>
     </div>
