show images on detail page, but show only http images on list-view

--- a/src/app/items/item-detail.component.html
+++ b/src/app/items/item-detail.component.html
@@ -24,7 +24,7 @@
 
               <div class='row'>
                 <div class='col-md-3'>Notice:</div>
-                <div class='col-md-6'>{{item.description}}</div>
+                <div class='col-md-6'>{{item.remarks}}</div>
               </div>
 
             </div>
