--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -19,10 +19,9 @@
 
   </div>
   <div class='panel-body'>
-    <div class="row">
-      <div class='col-md-2'>Search :</div>
-      <div class='col-md-4'>
-        <input type='text' [(ngModel)]='listFilter'/>  <!-- bind listFilter -->
+    <div class="search" align="right">
+      <div class='col-md-4' >
+        <input type='text' [(ngModel)]='listFilter' placeholder="Search for items"/>  <!-- bind listFilter -->
       </div>
     </div>
     <div class='row'>
