--- a/src/app/items/item-list.component.css
+++ b/src/app/items/item-list.component.css
@@ -2,11 +2,7 @@ thead {
     color: darkgrey;
 }
 
-/*
-.navbar-nav>ul.profile-image {
-  padding-left: 100%;
-  padding-bottom: 20%;
-}
-*/
+.search {
+  float: right;
 
-red {background-color: red}
+}
