--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -12,22 +12,30 @@
 -->
 
     <ul class="nav navbar-nav navbar-right">
-        <img [src]="userImage" class="profile-image img-circle" style="max-height:10%;max-width:20%"/>
       <li><a>{{theUser}} Logged in</a></li>
     </ul>
 
-
   </div>
+
   <div class='panel-body'>
     <div class="search" align="right">
       <div class='col-md-4' >
         <input type='text' [(ngModel)]='listFilter' placeholder="Search for items"/>  <!-- bind listFilter -->
       </div>
     </div>
-    <div class='row'>
+    <div class='row' style="margin-bottom:10px">
       <div class='col-md-6'>
         <h3>Searched for : {{listFilter}} </h3>
       </div>
+
+      <div class="col-md-7">
+      <div class="btn-group btn-group-sm">
+        <button class="btn btn-default" [class.active]="filterBy==='all'" (click)="filterBy='all'">All</button>
+        <button class="btn btn-default" [class.active]="filterBy==='available'" (click)="filterBy='available'">In stock</button>
+        <button class="btn btn-default" [class.active]="filterBy==='out'" (click)="filterBy='out'">Out now</button>
+      </div>
+
+    </div>
     </div>
 
     <div class="table-responsive">
@@ -72,4 +80,10 @@
       </table>
     </div>
   </div>
+
+<!--
+  <session-list [sortBy]="sortBy" [filterBy]="filterBy" *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
+  <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
+
+  -->
 </div>
