--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -19,71 +19,27 @@
 
   <div class='panel-body'>
     <div class="search" align="right">
-      <div class='col-md-4' >
+      <div class='col-md-3' >
         <input type='text' [(ngModel)]='listFilter' placeholder="Search for items"/>  <!-- bind listFilter -->
       </div>
     </div>
     <div class='row' style="margin-bottom:10px">
-      <div class='col-md-6'>
+      <div class='col-md-5'>
         <h3>Searched for : {{listFilter}} </h3>
       </div>
 
-      <div class="col-md-7">
+      <div class="col-md-8">
       <div class="btn-group btn-group-sm">
         <button class="btn btn-default" [class.active]="filterBy==='all'" (click)="filterBy='all'">All</button>
         <button class="btn btn-default" [class.active]="filterBy==='available'" (click)="filterBy='available'">In stock</button>
         <button class="btn btn-default" [class.active]="filterBy==='out'" (click)="filterBy='out'">Out now</button>
+        <button class="btn btn-default" [class.active]="filterBy==='notify'" (click)="filterBy='notify'">Notify</button>
       </div>
 
     </div>
     </div>
-
-    <div class="table-responsive">
-      <table class='table table-striped'>
-        <thead>
-        <tr>
-          <th>Item</th>
-          <th>Borrower</th>
-          <th>Due date</th>
-          <th>Status</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor='let item of items | itemFilter:listFilter'>
-          <td><img [src]='item.imageUrl'
-                   [title]='item.name'
-                   [style.width.px]='imageWidth'
-                   [style.margin.px]='imageMargin'> <a [routerLink]="['item/'+item.$key]">{{ item.name }}</a></td>
-          <td>{{ item.borrowerName}}</td>
-          <td>{{ item.dueDate }}</td>
-
-          <td>
-            <span *ngIf="item.status=='Out' ">
-              <img src="../../assets/images/out-icon.png"
-                   style="max-height:50%;max-width:50%"/>
-               {{item.status}}
-          </span>
-            <span *ngIf="item.status=='Available' ">
-              <img src="../../assets/images/available-icon.png"
-                   style="max-height:50%;max-width:50%"/>
-               {{item.status}}
-          </span>
-            <span *ngIf="item.status=='Notify' ">
-              <img src="../../assets/images/notify-icon.png"
-                   style="max-height:50%;max-width:50%"/>
-              <img src="../../assets/images/notify-button.png"
-                   style="max-height:50%;max-width:50%"/>
-          </span>
-          </td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
+<item-list-nest [filterBy]="filterBy"  [items]="items" [listFilter]="listFilter" ></item-list-nest>
   </div>
 
-<!--
-  <session-list [sortBy]="sortBy" [filterBy]="filterBy" *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
-  <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
 
-  -->
 </div>
