login page tweaks

--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -3,5 +3,11 @@
 <div class="row">
   <img  class="float-center" src="../../assets/images/404error.gif">
   <div><h1>404 page dont exist</h1></div>
+
+  <div class='panel-footer'>
+    <a class='btn btn-default' (click)='onBack()' style='width:80px'>
+      <i class='glyphicon glyphicon-chevron-left'></i> Back
+    </a>
+  </div>
 </div>
 
