--- a/src/app/home/login.component.html
+++ b/src/app/home/login.component.html
@@ -1,5 +1,4 @@
-﻿<div class="jumbotron text-center">
-  <div class="container">
+﻿<body>
 
 
     <img src="../../assets/images/borrowing_logo.png"
@@ -10,5 +9,4 @@
 
     <a (click)="login()"><img src="../../assets/images/fb_button.png" class="img-responsive center-block"></a>
 
-  </div>
-</div>
+</body>
