--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -38,7 +38,7 @@
 
     </div>
     </div>
-<item-list-nest [filterBy]="filterBy"  [items]="items" [listFilter]="listFilter" ></item-list-nest>
+<app-item-list-nest [filterBy]="filterBy"  [items]="items" [listFilter]="listFilter" ></app-item-list-nest>
   </div>
 
 
