--- a/src/app/home/login.component.css
+++ b/src/app/home/login.component.css
@@ -1,7 +1,6 @@
-#fb {
-  background: #3B5998 url('../../assets/images/facebook.svg') no-repeat 14px 6px;
-  background-size: 47px;
-  color: #fff;
+body {
+  background-color: #ECC82B;
+
 }
 
 @media (max-width: 600px) {
