Navbar removed & added fake navbar

--- a/src/app/home/login.component.html
+++ b/src/app/home/login.component.html
@@ -1,7 +1,7 @@
 ﻿<body>
 
 
-    <img src="../../assets/images/borrowing_logo.png"
+    <img src="../../assets/images/borrowing_logo_new.jpg"
          class="img-responsive center-block"
          style="max-height:300px;padding-bottom:50px"/>
 
