--- a/src/app/items/item-list-nest.html
+++ b/src/app/items/item-list-nest.html
@@ -2,23 +2,54 @@
   <table class='table table-striped'>
     <thead>
     <tr>
+      <th></th>
       <th>Item</th>
+      <th></th>
       <th>Borrower</th>
       <th>Due date</th>
+      <th>Reserved</th>
+      <th>Entity</th>
       <th>Status</th>
     </tr>
     </thead>
     <tbody>
 
 
-    <!-- <tr *ngFor='let item of visibleItems | itemFilter:listFilter'>  -->
-    <tr *ngFor='let item of visibleItems | itemFilter:listFilter'>
-      <td><img [src]='item.imageUrl'
-               [title]='item.name'
+    <tr *ngFor='let item of visibleItems | itemFilter:listFilter' [class.red]="item.status==='Notify'">
+      <td width=10>
+        <div *ngIf="item.photoURL">
+          <img style="float: left" [src]='item.photoURL'
                [style.width.px]='imageWidth'
-               [style.margin.px]='imageMargin'> <a [routerLink]="['item/'+item.$key]">{{ item.name }}</a></td>
-      <td>{{ item.borrowerName}}</td>
-      <td>{{ item.dueDate }}</td>
+               [style.margin.px]='imageMargin'></div>
+      </td>
+
+      <td><a [routerLink]="['/item/'+item.$key]">{{ item.name }}</a></td>
+
+      <td width=10>
+        <div *ngIf="item.loan">
+          <img style="float: left" [src]='item.loan.photoURL'
+               [style.width.px]='imageWidth'
+               [style.margin.px]='imageMargin'></div>
+      </td>
+
+      <td *ngIf="item.loan" >{{ item.loan.loanerName}}</td>
+      <td *ngIf="(!item.loan)" ></td>
+
+
+      <td *ngIf="item.loan" >{{ item.loan.formattedShortDate}}</td>
+      <td *ngIf="(!item.loan)" ></td>
+
+
+      <td>
+        <span *ngIf="item.reserved">
+          yes
+        </span>
+        <span *ngIf="!item.reserved">
+
+        </span>
+      </td>
+
+      <td>{{item.entityName}}</td>
 
       <td>
             <span *ngIf="item.status=='Out' ">
@@ -34,10 +65,9 @@
         <span *ngIf="item.status=='Notify' ">
               <img src="../../assets/images/notify-icon.png"
                    style="max-height:50%;max-width:50%"/>
-              <img src="../../assets/images/notify-button.png"
-                   style="max-height:50%;max-width:50%"/>
           </span>
       </td>
+
     </tr>
 
 
