--- a/src/app/items/item-list.component.css
+++ b/src/app/items/item-list.component.css
@@ -6,3 +6,17 @@ thead {
   float: right;
 
 }
+
+.avatar {
+  background-image: url('http://i.stack.imgur.com/Dj7eP.jpg');
+
+  width: 50px;
+  height: 50px;
+
+  background-size: cover;
+
+  background-position: center;
+
+  border-radius: 60%;
+}
+
