--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -1,44 +1,88 @@
+<nav class="navbar navbar-inverse">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+              aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand">Borrowing admin-panel</a>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse">
+
+
+      <ul class="nav navbar-nav navbar-left">
+        <li *ngIf="tabs"><a [routerLink]="['/add']">Add item</a></li>
+      </ul>
+
+      <ul class="nav navbar-nav navbar-left">
+        <li *ngIf="tabs"><a [routerLink]="['/items']">List items</a></li>
+      </ul>
+
+      <ul class="nav navbar-nav navbar-left">
+        <li *ngIf="tabs"><a [routerLink]="['/users']">List users</a></li>
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right" style="margin-right:10px">
+        <li *ngIf="tabs"><a (click)="logout()">Logout</a></li>
+      </ul>
+
+
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
+
+
+
+
+
+
+
+
+
 <div class="panel panel-primary">
   <div class='panel-heading'>
-    <img src="../../assets/images/logo_bannerjpg_small.jpg"/>
 
-<!--
-    <ul class="nav navbar-nav navbar-right">
-      <a class="item">
-        <img class="ui avatar img-responsive" [src]="userImage">
-      </a>
-      <li><a>{{theUser}} Logged in</a></li>
-    </ul>
--->
+    <img src="../../assets/images/logo_bannerjpg_placeholder.jpg"/>
 
-    <ul class="nav navbar-nav navbar-right">
-      <li><a>{{theUser}} Logged in</a></li>
+
+    <ul class="nav navbar-nav navbar-right" >
+      <img  class="avatar" align="left" [src]="userImage">
+      <li><a>{{theUser}} </a></li>
     </ul>
 
+    <!--
+        <ul class="nav navbar-nav navbar-right">
+          <li><a>{{theUser}} Logged in</a></li>
+        </ul>
+    -->
   </div>
 
   <div class='panel-body'>
     <div class="search" align="right">
-      <div class='col-md-3' >
+      <div class='col-md-3'>
         <input type='text' [(ngModel)]='listFilter' placeholder="Search for items"/>  <!-- bind listFilter -->
       </div>
     </div>
-    <div class='row' style="margin-bottom:10px">
+
+    <div class='row' style="margin-bottom:10px" *ngIf='listFilter'>
       <div class='col-md-5'>
         <h3>Searched for : {{listFilter}} </h3>
       </div>
-
-      <div class="col-md-">
-      <div class="btn-group btn-group-sm" style="margin-right:70px">
-        <button class="btn btn-default" [class.active]="filterBy==='all'" (click)="filterBy='all'">All</button>
-        <button class="btn btn-default" [class.active]="filterBy==='available'" (click)="filterBy='available'">In stock</button>
-        <button class="btn btn-default" [class.active]="filterBy==='out'" (click)="filterBy='out'">Out now</button>
-        <button class="btn btn-default" [class.active]="filterBy==='notify'" (click)="filterBy='notify'">Notify</button>
-      </div>
-
     </div>
+
+    <div class="btn-group btn-group" style="margin-right:70px">
+      <button class="btn btn-default" [class.active]="filterBy==='all'" (click)="filterBy='all'">All</button>
+      <button class="btn btn-default" [class.active]="filterBy==='available'" (click)="filterBy='available'">In stock
+      </button>
+      <button class="btn btn-default" [class.active]="filterBy==='out'" (click)="filterBy='out'">Out now</button>
+      <button class="btn btn-default" [class.active]="filterBy==='notify'" (click)="filterBy='notify'">Overdue</button>
     </div>
-<app-item-list-nest [filterBy]="filterBy"  [items]="items" [listFilter]="listFilter" ></app-item-list-nest>
+
+
+    <app-item-list-nest [filterBy]="filterBy" [items]="items" [listFilter]="listFilter"></app-item-list-nest>
   </div>
 
 
