--- a/src/app/items/item-list-nest.html
+++ b/src/app/items/item-list-nest.html
@@ -15,7 +15,7 @@
     <tbody>
 
 
-    <tr *ngFor='let item of visibleItems | itemFilter:listFilter' [class.red]="item.status==='Notify'">
+    <tr *ngFor='let item of visibleItems | itemFilter:listFilter' [class.red]=" item.status==='Notify'">
       <td width=10>
         <div *ngIf="item.photoURL">
           <img style="float: left" [src]='item.photoURL'
@@ -23,50 +23,50 @@
                [style.margin.px]='imageMargin'></div>
       </td>
 
-      <td><a [routerLink]="['/item/'+item.$key]">{{ item.name }}</a></td>
+      <td><a [routerLink]="['/items/item/'+item.$key]">{{ item.name }}</a></td>
 
-      <td width=10>
-        <div *ngIf="item.loan">
-          <img style="float: left" [src]='item.loan.photoURL'
-               [style.width.px]='imageWidth'
-               [style.margin.px]='imageMargin'></div>
-      </td>
+            <td width=10>
+              <div *ngIf="item.loan">
+                <img style="float: left" [src]='item.loan.photoURL'
+                     [style.width.px]='imageWidth'
+                     [style.margin.px]='imageMargin'></div>
+            </td>
 
-      <td *ngIf="item.loan" >{{ item.loan.loanerName}}</td>
-      <td *ngIf="(!item.loan)" ></td>
-
-
-      <td *ngIf="item.loan" >{{ item.loan.formattedShortDate}}</td>
-      <td *ngIf="(!item.loan)" ></td>
+            <td *ngIf="item.loan" >{{ item.loan.loanerName}}</td>
+            <td *ngIf="(!item.loan)" ></td>
 
 
-      <td>
-        <span *ngIf="item.reserved">
-          yes
-        </span>
-        <span *ngIf="!item.reserved">
+            <td *ngIf="item.loan" >{{ item.loan.formattedShortDate}}</td>
+            <td *ngIf="(!item.loan)" ></td>
 
-        </span>
-      </td>
 
-      <td>{{item.entityName}}</td>
+            <td>
+              <span *ngIf="item.reserved">
+                yes
+              </span>
+              <span *ngIf="!item.reserved">
 
-      <td>
-            <span *ngIf="item.status=='Out' ">
-              <img src="../../assets/images/out-icon.png"
-                   style="max-height:50%;max-width:50%"/>
-               {{item.status}}
-          </span>
-        <span *ngIf="item.status=='Available' ">
-              <img src="../../assets/images/available-icon.png"
-                   style="max-height:50%;max-width:50%"/>
-               {{item.status}}
-          </span>
-        <span *ngIf="item.status=='Notify' ">
-              <img src="../../assets/images/notify-icon.png"
-                   style="max-height:50%;max-width:50%"/>
-          </span>
-      </td>
+              </span>
+            </td>
+
+            <td>{{item.entityName}}</td>
+
+            <td>
+                  <span *ngIf="item.status=='Out' ">
+                    <img src="../../assets/images/out-icon.png"
+                         style="max-height:50%;max-width:50%"/>
+                     {{item.status}}
+                </span>
+              <span *ngIf="item.status=='Available' ">
+                    <img src="../../assets/images/available-icon.png"
+                         style="max-height:50%;max-width:50%"/>
+                     {{item.status}}
+                </span>
+              <span *ngIf="item.status=='Notify' ">
+                    <img src="../../assets/images/notify-icon.png"
+                         style="max-height:50%;max-width:50%"/>
+                </span>
+            </td>
 
     </tr>
 
