--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -14,11 +14,11 @@
 
 
       <ul class="nav navbar-nav navbar-left">
-        <li *ngIf="tabs"><a [routerLink]="['add']">Add item</a></li>
+        <li *ngIf="tabs"><a [routerLink]="['/add']">Add item</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-left">
-        <li *ngIf="tabs"><a [routerLink]="['/items']">List items</a></li>
+        <li *ngIf="tabs"><a [routerLink]="['']">List items</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-left">
