--- a/src/app/items/item-list-nest.html
+++ b/src/app/items/item-list-nest.html
@@ -42,7 +42,7 @@
 
             <td>
               <span *ngIf="item.reserved">
-                yes
+                Yes
               </span>
               <span *ngIf="!item.reserved">
 
