--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -47,6 +47,9 @@
 
     <img src="../../assets/images/logo_bannerjpg_placeholder.jpg"/>
 
+    <ul class="nav navbar-nav left" >
+      <h3>Total items: {{nrOfItem}} </h3>
+    </ul>
 
     <ul class="nav navbar-nav navbar-right" >
       <img  class="avatar" align="left" [src]="userImage">
