--- a/src/app/items/item-detail.component.css
+++ b/src/app/items/item-detail.component.css
@@ -1,25 +1,13 @@
-.red { background-color: #F8B3AC;
-}
+.panel {
+  /*
+  padding-top: 40px;
+  padding-bottom: 40px;
+  */
 
-.table tr:hover  {
-  background-color:#48C6F4 ;
-  color: white;
-}
-
-/*  stribed rows
-.table:not(.red) tr:nth-child(even){
-
-  background-color: #f2f2f2
-}
-*/
-.myDiv {
-  width: 800px;
-  height: 200px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-left: -30%;
-  margin-top: -10%;
+  background-color: #eee;
+  width: 65%;
+  margin: 0 auto;
+  margin-top: 10%;
 }
 
 .avatar {
@@ -40,4 +28,7 @@
   /* round the edges to a circle with border radius 1/2 container size */
   border-radius: 60%;
 
+
 }
+
+
