before crope-test

--- a/src/app/items/item-list-nest.css
+++ b/src/app/items/item-list-nest.css
@@ -25,7 +25,7 @@
 .avatar {
 
   /* This image is 687 wide by 1024 tall, similar to your aspect ratio */
-  background-image: url('http://i.stack.imgur.com/Dj7eP.jpg');
+  background-image: url('../../assets/images/NoPhoto.png');
 
   /* make a square container */
   width: 50px;
