--- a/src/app/items/item-list-nest.html
+++ b/src/app/items/item-list-nest.html
@@ -9,7 +9,7 @@
       <th>Borrower</th>
       <th>Due date</th>
       <th>Reserved</th>
-      <th>Entity</th>
+      <th>Entities</th>
       <th>Status</th>
     </tr>
     </thead>
