--- a/src/app/items/item-detail.component.css
+++ b/src/app/items/item-detail.component.css
@@ -11,24 +11,17 @@
 }
 
 .avatar {
-
   /* This image is 687 wide by 1024 tall, similar to your aspect ratio */
-  background-image: url('http://i.stack.imgur.com/Dj7eP.jpg');
-
+  background-image: url('http://placehold.it/128x128');
   /* make a square container */
   width: 50px;
   height: 50px;
-
   /* fill the container, preserving aspect ratio, and cropping to fit */
   background-size: cover;
-
   /* center the image vertically and horizontally */
   background-position: center;
-
   /* round the edges to a circle with border radius 1/2 container size */
   border-radius: 60%;
-
-
 }
 
 
