--- a/src/app/items/item-list.component.css
+++ b/src/app/items/item-list.component.css
@@ -8,7 +8,7 @@ thead {
 }
 
 .avatar {
-  background-image: url('http://i.stack.imgur.com/Dj7eP.jpg');
+  background-image: url('http://placehold.it/128x128');
 
   width: 50px;
   height: 50px;
