--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse" xmlns:margin-right="http://www.w3.org/1999/xhtml"
+     xmlns:margin-right="http://www.w3.org/1999/xhtml" xmlns:margin-right="http://www.w3.org/1999/xhtml">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -26,7 +27,7 @@
       </ul>
 -->
       <ul class="nav navbar-nav navbar-right" style="margin-right:10px">
-        <li *ngIf="tabs"><a (click)="logout()">	<i class='glyphicon glyphicon-log-out'> Logout</i></a></li>
+        <li *ngIf="tabs"><a (click)="logout()"> <i class='glyphicon glyphicon-log-out'> Logout</i></a></li>
       </ul>
 
 
@@ -36,26 +37,42 @@
 
 
 
-<popup  #popup1 (confirmClick)="onAddSubmit()">
+<popup #popup1 (confirmClick)="onAddSubmit()">
 
   <form class="form-horizontal">
     <div class="form-group">
-      <label  class="col-sm-3 control-label">Item name</label>
+      <label class="col-sm-3 control-label">Item name</label>
       <div class="col-sm-7">
-        <input type="text" class="form-control" name="email" [(ngModel)]="email" id="email" placeholder="Name">
+        <input type="text" class="form-control" name="name" [(ngModel)]="name" id="name" placeholder="Name">
       </div>
     </div>
 
     <div class="form-group">
-      <label  class="col-sm-3 control-label">Entity</label>
+      <label class="col-sm-3 control-label">Entity</label>
+
+   <!--
       <div class="col-sm-7">
-        <input type="password" class="form-control" name="entity" [(ngModel)]="password" id="entity" placeholder="Choose entity">
+      <select  class="form-control" [(ngModel)]="selectedItemAdd"   (ngModelChange)="onclickedValue($event)"  >
+        <optgroup label="Your entities">
+          <option *ngFor="let entity of entities "   [ngValue]="entity"   [attr.selected]="userEntityName==entity?.name ? true : null"> {{entity?.name}}</option>
+        </optgroup>
+        <optgroup label="Joined entities">
+          <option *ngFor="let jEntity of joinedEntities "  [ngValue]="jEntity" > {{jEntity?.entityName}}</option>
+        </optgroup>
+      </select>
+      </div>
+-->
+
+
+      <div class="col-sm-7">
+        <input type="text" class="form-control" name="n/a" [(ngModel)]="n/a" id="entity"
+               placeholder="Choose entity">
       </div>
     </div>
 
 
     <div class="form-group">
-      <label  class="col-sm-3 control-label">Reservation Days</label>
+      <label class="col-sm-3 control-label">Reservation Days</label>
       <div class="col-sm-2">
         <input class="form-control" type="number" value="3" id="reservationDays">
       </div>
@@ -63,10 +80,10 @@
 
 
     <div class="form-group">
-      <label  class="col-sm-3 control-label">Description</label>
+      <label class="col-sm-3 control-label">Description</label>
       <div class="col-sm-7">
 
-        <textarea  (ngModel)='description' name="description" ide="description'" rows="2" cols="32">
+        <textarea (ngModel)='description' name="description" ide="description'" rows="2" cols="32">
 </textarea>
 
       </div>
@@ -74,16 +91,45 @@
 
 
     <div class="form-group">
-      <label  class="col-sm-3 control-label">Image</label>
-      <input   id="image" name="image" [(ngModel)]="image" type="file" >
-    </div>
 
+
+      <div *ngIf="changingImage">
+        <img-cropper [image]="data" [settings]="cropperSettings"></img-cropper>
+        <br>
+        <img
+          [src]="data && data.image ? data.image :  'http://placehold.it/128x128'"
+          class="profile-img">
+        <button type="button" class="btn btn-default" (click)='onChangingImageClick()'>Ok</button>
+      </div>
+
+
+      <div *ngIf="!changingImage">
+        <b>Item image</b>
+        <div>
+          <div align="center">
+            <img id="imageID"
+              [src]="data && data.image ? data.image :  'http://placehold.it/128x128'"
+              class="profile-img"><br>
+          </div>
+          <button type="button" (click)="onChangingImageClick()">Choose Image</button>
+        </div>
+      </div>
+
+
+      <!--
+            <label  class="col-sm-3 control-label">Image</label>
+          </div>
+            <img-cropper [image]="data" [settings]="cropperSettings"></img-cropper><br>
+            <img [src]="data.image" [width]="cropperSettings.croppedWidth" [height]="cropperSettings.croppedHeight">
+            </div>
+            -->
+
+
+    </div>
   </form>
 
 
 </popup>
-
-
 
 
 <div class="panel panel-primary">
@@ -91,9 +137,21 @@
 
     <img src="../../assets/images/logo_bannerjpg_placeholder.jpg"/>
 
-    <ul class="nav navbar-nav left">
-      <h3>Total items: {{nrOfItem}} </h3>
-    </ul>
+    <div  class="col-sm-1">
+      <label>Current entity:</label>
+    </div>
+
+    <div  class="col-sm-3">
+      <select  class="form-control" [(ngModel)]="selectedItem"  (ngModelChange)="onclickedValue($event)"  >
+        <optgroup label="Your entities">
+        <option *ngFor="let entity of entities "   [ngValue]="entity"   [attr.selected]="userEntityName==entity?.name ? true : null"> {{entity?.name}}</option>
+        </optgroup>
+        <optgroup label="Joined entities">
+          <option *ngFor="let jEntity of joinedEntities " [ngValue]="jEntity"   [attr.selected]="userEntityName==entity?.name ? true : null"> {{jEntity?.entityName}}</option>
+        </optgroup>
+      </select>
+    </div>
+
 
     <ul class="nav navbar-nav navbar-right">
       <img class="avatar" align="left" [src]="userImage">
@@ -131,14 +189,15 @@
       </div>
 
       <div class="btn-group mr-3 " role="group" aria-label="Second group">
-        <button type="button" class="btn btn-default" [class.active]="filterBy==='notify'" (click)="filterBy='notify'">Overdue
+        <button type="button" class="btn btn-default" [class.active]="filterBy==='notify'" (click)="filterBy='notify'">
+          Overdue
         </button>
       </div>
 
 
       <div class="btn-group mr-3 " role="group" aria-label="Second group">
 
-        <button type="button" class="btn btn-default"  (click)='addDialog()'>Add item</button>
+        <button type="button" class="btn btn-default" (click)='addDialog()'>Add item</button>
 
         <!--
         <button type="button" class="btn btn-default" [routerLink]="['/add']">Add item</button>
